// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/commodore/index extractPackageFile() extracts component urls for version pins 1`] = `
Array [
  Object {
    "currentValue": "v3.0.0",
    "depName": "appuio-cloud in 4/pins.yml",
    "lookupName": "https://github.com/appuio/component-appuio-cloud.git",
  },
  Object {
    "currentValue": "v1.2.3",
    "depName": "argocd in 4/pins.yml",
    "lookupName": "https://github.com/projectsyn/component-argocd.git",
  },
]
`;

exports[`src/commodore/index extractPackageFile() extracts component urls for version pins in tenant repo 1`] = `
Array [
  Object {
    "currentValue": "v3.0.0",
    "depName": "appuio-cloud in 5/tenant/c-foo.yml",
    "lookupName": "https://github.com/appuio/component-appuio-cloud.git",
  },
  Object {
    "currentValue": "v1.2.3",
    "depName": "argocd in 5/tenant/c-foo.yml",
    "lookupName": "https://github.com/projectsyn/component-argocd.git",
  },
]
`;

exports[`src/commodore/index extractPackageFile() extracts component versions 1`] = `
Array [
  Object {
    "currentValue": "v1.1.0",
    "depName": "appuio-cloud in 1/params.yml",
    "lookupName": "https://github.com/appuio/component-appuio-cloud.git",
  },
  Object {
    "currentValue": "v1.0.0",
    "depName": "appuio-cloud2 in 1/params.yml",
    "lookupName": "https://github.com/appuio/component-appuio-cloud.git",
  },
  Object {
    "currentValue": "v1.0.0",
    "depName": "argocd in 1/params.yml",
    "lookupName": "https://github.com/projectsyn/component-argocd.git",
  },
  Object {
    "currentValue": "v2.1.0",
    "depName": "backup-k8up in 1/params.yml",
    "lookupName": "https://github.com/projectsyn/component-backup-k8up.git",
  },
  Object {
    "currentValue": "v1.0.0",
    "depName": "kyverno in 1/params.yml",
    "lookupName": "https://github.com/projectsyn/component-kyverno.git",
  },
  Object {
    "currentValue": "v2.2.0",
    "depName": "lieutenant in 1/params.yml",
    "lookupName": "https://github.com/projectsyn/component-lieutenant.git",
  },
]
`;

exports[`src/commodore/index extractPackageFile() generates valid Commodore parameters for clusters with no dynamic facts 1`] = `
Array [
  Object {
    "currentValue": "v3.0.0",
    "depName": "appuio-cloud in 5/tenant/c-foo-4.yml",
    "lookupName": "https://github.com/appuio/component-appuio-cloud.git",
  },
  Object {
    "currentValue": "v1.2.3",
    "depName": "argocd in 5/tenant/c-foo-4.yml",
    "lookupName": "https://github.com/projectsyn/component-argocd-k3d.git",
  },
]
`;

exports[`src/commodore/index extractPackageFile() proceeds without cluster info on 404 1`] = `
Array [
  Object {
    "currentValue": "v3.0.0",
    "depName": "appuio-cloud in 5/tenant/c-foo-3.yml",
    "lookupName": "https://github.com/appuio/component-appuio-cloud.git",
  },
  Object {
    "currentValue": "v1.2.3",
    "depName": "argocd in 5/tenant/c-foo-3.yml",
    "lookupName": "https://github.com/projectsyn/component-argocd.git",
  },
]
`;

exports[`src/commodore/index extractPackageFile() uses cluster info returned by Lieutenant 1`] = `
Array [
  Object {
    "currentValue": "v3.0.0",
    "depName": "appuio-cloud in 5/tenant/c-foo-2.yml",
    "lookupName": "https://github.com/appuio/component-appuio-cloud.git",
  },
  Object {
    "currentValue": "v1.2.3",
    "depName": "argocd in 5/tenant/c-foo-2.yml",
    "lookupName": "https://github.com/projectsyn/component-argocd-k3d.git",
  },
]
`;

exports[`src/commodore/index extractPackageFile() uses facts from factsMap 1`] = `
Array [
  Object {
    "currentValue": "v3.0.0",
    "depName": "appuio-cloud in 5/tenant/test.yml",
    "lookupName": "https://github.com/appuio/component-appuio-cloud.git",
  },
  Object {
    "currentValue": "v1.2.3",
    "depName": "argocd in 5/tenant/test.yml",
    "lookupName": "https://github.com/projectsyn/component-argocd-k3d.git",
  },
]
`;
